--- a/youtube.html
+++ b/youtube.html
@@ -1,1 +1,2 @@
-<meta http-equiv="refresh" content="5; URL=https://https://www.youtube.com/channel/UC5zVev3F_XvwemHGYUeCMmA/featured"/>
+<title>Cwookie's YouTube</title>
+<meta http-equiv="refresh" content="5; URL=https://www.youtube.com/channel/UC5zVev3F_XvwemHGYUeCMmA/featured"/>
