--- a/youtube.html
+++ b/youtube.html
@@ -1,2 +1,2 @@
 <title>Cwookie's YouTube</title>
-<meta http-equiv="refresh" content="5; URL=https://www.youtube.com/channel/UC5zVev3F_XvwemHGYUeCMmA/featured"/>
+<meta http-equiv="refresh" content="5; URL=www.youtube.com/channel/UC5zVev3F_XvwemHGYUeCMmA/featured"/>
