--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Email: copyright@apexcloud.xyz
                         "
                         class="heading-hero"
                     >
-                        <b>Welcome to Cwxkie's Wrld</b>
+                        <b>Welcome to Cwxkie's  Wrld Official Website</b>
                     </h3>
                     <p>____________________</p>
                     <h4
@@ -171,46 +171,46 @@ Email: copyright@apexcloud.xyz
                         "
                         class="heading"
                     >
-                                <div class="section footer wf-section">
-            <div class="content">
-                <div class="w-layout-grid grid-footer">
-                    <div id="w-node-_6603d099-87ea-d392-449a-caaf2cdb7f91-2cdb7f8e" data-w-id="6603d099-87ea-d392-449a-caaf2cdb7f91" class="block-footer">
-                        <img src="productions.png" loading="lazy" alt="" class="logo-footer" />
-                        <p class="paragraph-footer">
-                            Very fast and modern websites. Anything you may need? We're here to help.<br />
-                            <br />
-                            <a href="mailto:hello@apexcloud.xyz" class="link-underlined">hello@apexcloud.xyz</a>
-                        </p>
+                    <div class="section footer wf-section">
+                        <div class="content">
+                            <div class="w-layout-grid grid-footer">
+                                <div id="w-node-_6603d099-87ea-d392-449a-caaf2cdb7f91-2cdb7f8e" data-w-id="6603d099-87ea-d392-449a-caaf2cdb7f91" class="block-footer">
+                                    <img src="productions.png" loading="lazy" alt="" class="logo-footer" />
+                                    <p class="paragraph-footer">
+                                        Cwxkie's Wrld Official Website<br />
+                                        <br />
+                                        <a href="/cdn-cgi/l/email-protection#acc4c9c0c0c3eccddcc9d4cfc0c3d9c882d4d5d6" class="link-underlined"><span class="__cf_email__" data-cfemail="dfb7bab3b3b09fbeafbaa7bcb3b0aabbf1a7a6a5">[email&#160;protected]</span></a>
+                                    </p>
+                                </div>
+                                <div data-w-id="6603d099-87ea-d392-449a-caaf2cdb7f99" class="block-footer">
+                                    <div class="heading-footer">Quick Links</div>
+                                    <a href="/about" class="link-footer">About</a><a href="/contact" class="link-footer">Contact</a>
+                                </div>
+                                <div data-w-id="6603d099-87ea-d392-449a-caaf2cdb7fa5" class="block-footer">
+                                    <div class="heading-footer">Social</div>
+                                    <a href="https://www.instagram.com/michael.j.brinkley/" target="_blank" class="link-footer">Instagram<br /></a>
+                                    <a href="https://twitter.com/yourstationx" target="_blank" class="link-footer">Twitter</a><a href="https://www.youtube.com/c/lolitscwookie" target="_blank" class="link-footer">YouTube</a>
+                                </div>
+                                <div data-w-id="6603d099-87ea-d392-449a-caaf2cdb7fb1" class="block-footer">
+                                    <div class="heading-footer">Legal</div>
+                                    <a href="/guidelines" class="link-footer">Guidelines</a>
+                                    <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="503c3537313c1033273f3f3b39357e28292a">[email&#160;protected]</a>
+                                </div>
+                            </div>
+                            <div data-w-id="6603d099-87ea-d392-449a-caaf2cdb7fbb" class="footer-down">
+                                <p class="paragraph-footer">© Copyright 2021, Cwookie 
+                                    <div>All rights reserved. It is illegal to copy this website.</a></p>
+                                        <a href="https://apexcloud.xyz/" target="_blank" class="link-footer">Powered by ApexCloud</a>
+                            </div>
+                        </div>
                     </div>
-                    <div data-w-id="6603d099-87ea-d392-449a-caaf2cdb7f99" class="block-footer">
-                        <div class="heading-footer">Quick Links</div>
-                        <a href="/about" class="link-footer">About</a><a href="https://uptime.apexcloud.xyz" class="link-footer">Status Page<br /></a><a href="/contact" class="link-footer">Contact</a><a href="/news" class="link-footer">News</a>
-                    </div>
-                    <div data-w-id="6603d099-87ea-d392-449a-caaf2cdb7fa5" class="block-footer">
-                        <div class="heading-footer">Social</div>
-                        <a href="https://www.instagram.com/michael.j.brinkley/" target="_blank" class="link-footer">Instagram<br /></a>
-                        <a href="https://twitter.com/yourstationx" target="_blank" class="link-footer">Twitter</a><a href="https://www.youtube.com/c/lolitscwookie" target="_blank" class="link-footer">YouTube</a>
-                    </div>
-                    <div data-w-id="6603d099-87ea-d392-449a-caaf2cdb7fb1" class="block-footer">
-                        <div class="heading-footer">Legal</div>
-                        <a href="/guidelines" class="link-footer">Guidelines</a>
-                        legal@cwookie.xyz
-                    </div>
-                </div>
-                <div data-w-id="6603d099-87ea-d392-449a-caaf2cdb7fbb" class="footer-down">
-                    <p class="paragraph-footer">© Copyright 2021, Cwookie 
-                        <div>All rights reserved. It is illegal to copy this website.</a></p>
-                            <a href="https://apexcloud.xyz/" target="_blank" class="link-footer">Powered by ApexCloud</a>
-                </div>
-            </div>
-        </div>
-        <script
-            src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=613e7a6e19fd8f65b8d29b8e"
-            type="text/javascript"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-            crossorigin="anonymous"
-        ></script>
-        <script src="https://assets.website-files.com/613e7a6e19fd8f65b8d29b8e/js/webflow.82bddd027.js" type="text/javascript"></script>
-        <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
-    </body>
-</html>
+                    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script
+                        src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=613e7a6e19fd8f65b8d29b8e"
+                        type="text/javascript"
+                        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+                        crossorigin="anonymous"
+                    ></script>
+                    <script src="https://assets.website-files.com/613e7a6e19fd8f65b8d29b8e/js/webflow.82bddd027.js" type="text/javascript"></script>
+                    <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
+                </body>
+            </html>
