--- a/index.html
+++ b/index.html
@@ -177,30 +177,29 @@ Email: copyright@apexcloud.xyz
                                 <div id="w-node-_6603d099-87ea-d392-449a-caaf2cdb7f91-2cdb7f8e" data-w-id="6603d099-87ea-d392-449a-caaf2cdb7f91" class="block-footer">
                                     <img src="productions.png" loading="lazy" alt="" class="logo-footer" />
                                     <p class="paragraph-footer">
-                                        Cwxkie's Wrld Official Website<br />
+                                        Very fast and modern websites. Anything you may need? We're here to help.<br />
                                         <br />
-                                        <a href="/cdn-cgi/l/email-protection#acc4c9c0c0c3eccddcc9d4cfc0c3d9c882d4d5d6" class="link-underlined"><span class="__cf_email__" data-cfemail="dfb7bab3b3b09fbeafbaa7bcb3b0aabbf1a7a6a5">[email&#160;protected]</span></a>
+                                        <a href="/cdn-cgi/l/email-protection#88e0ede4e4e7c8e9f8edf0ebe4e7fdeca6f0f1f2" class="link-underlined"><span class="__cf_email__" data-cfemail="1f777a7373705f7e6f7a677c73706a7b31676665">[email&#160;protected]</span></a>
                                     </p>
                                 </div>
                                 <div data-w-id="6603d099-87ea-d392-449a-caaf2cdb7f99" class="block-footer">
                                     <div class="heading-footer">Quick Links</div>
-                                    <a href="/about" class="link-footer">About</a><a href="/contact" class="link-footer">Contact</a>
+                                    <a href="/about" class="link-footer">About</a><a href="https://uptime.apexcloud.xyz" class="link-footer">Status Page<br /></a><a href="/contact" class="link-footer">Contact</a><a href="/news" class="link-footer">News</a>
                                 </div>
                                 <div data-w-id="6603d099-87ea-d392-449a-caaf2cdb7fa5" class="block-footer">
                                     <div class="heading-footer">Social</div>
-                                    <a href="https://www.instagram.com/michael.j.brinkley/" target="_blank" class="link-footer">Instagram<br /></a>
-                                    <a href="https://twitter.com/yourstationx" target="_blank" class="link-footer">Twitter</a><a href="https://www.youtube.com/c/lolitscwookie" target="_blank" class="link-footer">YouTube</a>
+                                    <a href="https://www.facebook.com/webflow/" target="_blank" class="link-footer">Facebook</a><a href="https://www.instagram.com/webflow/" target="_blank" class="link-footer">Instagram<br /></a>
+                                    <a href="https://twitter.com/webflow" target="_blank" class="link-footer">Twitter</a><a href="https://www.youtube.com/c/Webflow" target="_blank" class="link-footer">YouTube</a>
                                 </div>
                                 <div data-w-id="6603d099-87ea-d392-449a-caaf2cdb7fb1" class="block-footer">
                                     <div class="heading-footer">Legal</div>
-                                    <a href="/guidelines" class="link-footer">Guidelines</a>
-                                    <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="503c3537313c1033273f3f3b39357e28292a">[email&#160;protected]</a>
+                                    <a href="/terms" class="link-footer">Terms of Service</a><a href="/privacy" class="link-footer">Privacy Policy<br /></a><a href="/restricted-business" class="link-footer">Restricted Businesses</a>
                                 </div>
                             </div>
                             <div data-w-id="6603d099-87ea-d392-449a-caaf2cdb7fbb" class="footer-down">
-                                <p class="paragraph-footer">© Copyright 2021, Cwookie 
+                                <p class="paragraph-footer">© Copyright 2021, ApexCloud 
                                     <div>All rights reserved. It is illegal to copy this website.</a></p>
-                                        <a href="https://apexcloud.xyz/" target="_blank" class="link-footer">Powered by ApexCloud</a>
+                                        <a href="https://syswebcorp.com/" target="_blank" class="link-footer">Powered by SysWeb Corporation</a>
                             </div>
                         </div>
                     </div>
