--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Email: copyright@apexcloud.xyz
                         "
                         class="heading-hero"
                     >
-                        <b>Welcome to the Cwxkie's Wrld Official Website</b>
+                        <b>Welcome to the Cwxkie's Wrld</b>
                     </h3>
                     <p>____________________</p>
                     <h4
@@ -112,7 +112,7 @@ Email: copyright@apexcloud.xyz
                         "
                         class="paragraph-large"
                     >
-                    #CwxkieWrld
+                    The Official Website | #CwxkieWrld
                 </h4>
                     <div
                         data-w-id="77b60b92-872c-7997-8a32-0c57412cdee7"
@@ -163,7 +163,7 @@ Email: copyright@apexcloud.xyz
                     >
                         
                     </div>
-                    <h4
+                    <h5
                         data-w-id="edc71457-7d5b-7bea-ff46-ddb5540db920"
                         style="
                             -webkit-transform: translate3d(0, 15px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
@@ -176,7 +176,7 @@ Email: copyright@apexcloud.xyz
                     >
                     Seeking a place to share your thoughts & creations? Creative Thoughts is all about collaborating, sharing, conversation, and more! We have a wide variety of topics however we’re always listening to suggestions from the community.
 
-                    </h4>
+                    </h5>
                 </div>
                 <div class="w-layout-grid grid-features">
                     <div
