--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Email: copyright@apexcloud.xyz
                 (n.className += t + "js"), ("ontouchstart" in o || (o.DocumentTouch && c instanceof DocumentTouch)) && (n.className += t + "touch");
             })(window, document);
         </script>
-        <link href="https://assets.website-files.com/613e7a6e19fd8f65b8d29b8e/613e84ee206f3052746b209a_Favicon.png" rel="shortcut icon" type="productions.png" />
+        <link href="https://assets.website-files.com/613e7a6e19fd8f65b8d29b8e/613e84ee206f3052746b209a_Favicon.png" rel="shortcut icon" type="cwxkie.jpeg" />
         <link href="https://assets.website-files.com/613e7a6e19fd8f65b8d29b8e/613e87f679fcdf0159acce94_Webclip.png" rel="apple-touch-icon" />
         <script type="text/javascript">
             window.__WEBFLOW_CURRENCY_SETTINGS = {
@@ -63,7 +63,7 @@ Email: copyright@apexcloud.xyz
         <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
             <div class="w-layout-grid grid-navbar">
                 <div data-w-id="e8cea9b6-4627-f1cd-fec0-16ebfaf55914" class="nav">
-                    <a href="/" aria-current="page" class="brand w-nav-brand w--current"><img src="productions.png" loading="lazy" alt="" class="logo" /></a>
+                    <a href="/" aria-current="page" class="brand w-nav-brand w--current"><img src="cwxkie.png" loading="lazy" alt="" class="logo" /></a>
                 </div>
                 <div data-w-id="e8cea9b6-4627-f1cd-fec0-16ebfaf55917" class="nav">
                     <nav role="navigation" class="nav-menu w-nav-menu">
@@ -530,7 +530,7 @@ Email: copyright@apexcloud.xyz
             <div class="content">
                 <div class="w-layout-grid grid-footer">
                     <div id="w-node-_6603d099-87ea-d392-449a-caaf2cdb7f91-2cdb7f8e" data-w-id="6603d099-87ea-d392-449a-caaf2cdb7f91" class="block-footer">
-                        <img src="productions.png" loading="lazy" alt="" class="logo-footer" />
+                        <img src="cwxkie.jpeg" loading="lazy" alt="" class="logo-footer" />
                         <p class="paragraph-footer">
                             Very fast and modern websites. Anything you may need? We're here to help.<br />
                             <br />
