--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@ Email: copyright@apexcloud.xyz
                     <nav role="navigation" class="nav-menu w-nav-menu">
                         <a href="/" aria-current="page" class="nav-link w-nav-link w--current">Home</a>
                         <a href="/about" class="nav-link w-nav-link">About</a>
-                        <a href="/vpn" class="nav-link w-nav-link">VPN</a>
-                        <a href="https://uptime.apexcloud.xyz/" class="nav-link w-nav-link">Status</a>
-                        <a href="/news" class="nav-link w-nav-link">News</a>
                         <a href="/contact" class="nav-link w-nav-link">Contact</a>
+                        <a href="/guidelines" class="nav-link w-nav-link">Guidelines</a>
+                        <a href="https://forms.gle/RSUoR9pPtcnhyXzB6" class="nav-link w-nav-link">Appeals</a>
+                        <a href="https://forms.gle/9YMmfg836cP6JH8P8" class="nav-link w-nav-link">Staff Applications</a>
                     </nav>
                 </div>
                 <div class="nav right">
@@ -532,29 +532,29 @@ Email: copyright@apexcloud.xyz
                     <div id="w-node-_6603d099-87ea-d392-449a-caaf2cdb7f91-2cdb7f8e" data-w-id="6603d099-87ea-d392-449a-caaf2cdb7f91" class="block-footer">
                         <img src="cwxkie.jpeg" loading="lazy" alt="" class="logo-footer" />
                         <p class="paragraph-footer">
-                            Very fast and modern websites. Anything you may need? We're here to help.<br />
+                            The official Cwxkie's Wrld Website | #CwxkieWrld<br />
                             <br />
                             <a href="/cdn-cgi/l/email-protection#88e0ede4e4e7c8e9f8edf0ebe4e7fdeca6f0f1f2" class="link-underlined"><span class="__cf_email__" data-cfemail="1f777a7373705f7e6f7a677c73706a7b31676665">[email&#160;protected]</span></a>
                         </p>
                     </div>
                     <div data-w-id="6603d099-87ea-d392-449a-caaf2cdb7f99" class="block-footer">
                         <div class="heading-footer">Quick Links</div>
-                        <a href="/about" class="link-footer">About</a><a href="https://uptime.apexcloud.xyz" class="link-footer">Status Page<br /></a><a href="/contact" class="link-footer">Contact</a><a href="/news" class="link-footer">News</a>
+                        <a href="/about" class="link-footer">About</a><a href="/contact" class="link-footer">Contact</a>
                     </div>
                     <div data-w-id="6603d099-87ea-d392-449a-caaf2cdb7fa5" class="block-footer">
                         <div class="heading-footer">Social</div>
-                        <a href="https://www.facebook.com/webflow/" target="_blank" class="link-footer">Facebook</a><a href="https://www.instagram.com/webflow/" target="_blank" class="link-footer">Instagram<br /></a>
-                        <a href="https://twitter.com/webflow" target="_blank" class="link-footer">Twitter</a><a href="https://www.youtube.com/c/Webflow" target="_blank" class="link-footer">YouTube</a>
+                        <a href="https://www.instagram.com/michael.j.brinkley/" target="_blank" class="link-footer">Instagram<br /></a>
+                        <a href="https://twitter.com/yourstationx" target="_blank" class="link-footer">Twitter</a><a href="https://www.youtube.com/c/lolitscwookie" target="_blank" class="link-footer">YouTube</a>
                     </div>
                     <div data-w-id="6603d099-87ea-d392-449a-caaf2cdb7fb1" class="block-footer">
                         <div class="heading-footer">Legal</div>
-                        <a href="/terms" class="link-footer">Terms of Service</a><a href="/privacy" class="link-footer">Privacy Policy<br /></a><a href="/restricted-business" class="link-footer">Restricted Businesses</a>
+                        <a href="/guidelines" class="link-footer">Guidelines</a>legal@cwookie.xyz
                     </div>
                 </div>
                 <div data-w-id="6603d099-87ea-d392-449a-caaf2cdb7fbb" class="footer-down">
                     <p class="paragraph-footer">© Copyright 2021, Cwookie 
                         <div>All rights reserved. It is illegal to copy this website.</a></p>
-                            <a href="https://syswebcorp.com/" target="_blank" class="link-footer">Powered by SysWeb Corporation</a>
+                            <a href="https://apexcloud.xyz/" target="_blank" class="link-footer">Powered by ApexCloud</a>
                 </div>
             </div>
         </div>
