Cwxkie Wrld | InDev 1.1 | Indirect

--- a/beta/home.html
+++ b/beta/home.html
@@ -27,7 +27,7 @@ Email: copyright@apexcloud.xyz
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="x-ua-compatible" content="ie=edge" />
-        <title>Coastal Horizon Bank</title>
+        <title> Cwxkie Wrld | Home</title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link
@@ -62,11 +62,9 @@ Email: copyright@apexcloud.xyz
                                             <nav style="color:black;">
                                                 <ul id="navigation" style="color:black;">
                                                     <li style="color:black;"><a style="color:black;" href="/index.php">Home</a></li>
-                                                    <li style="color:black;"><a style="color:black;" href="/about/index.php">About</a></li>
-                                                    <li style="color:black;"><a style="color:black;" href="/banking/index.php">Banking</a></li>
-                                                    <li style="color:black;"><a style="color:black;" href="/lending/index.php">Lending</a></li>
-                                                    <li style="color:black;"><a style="color:black;" href="/contact/index.php">Contact</a></li>
-                                                    <li style="color:black;"><a style="color:black;" href="https://accounts.coastalhorizonbank.com">Open an Account</a></li>
+                                                    <li style="color:black;"><a style="color:black;" href="/about">About</a></li>
+                                                    <li style="color:black;"><a style="color:black;" href="/contact">Contact</a></li>
+                                                    <li style="color:black;"><a style="color:black;" href="https://discord.cwookie.xyz">Join Us</a></li>
                                                 </ul>
                                             </nav>
                                         </div>
@@ -92,8 +90,6 @@ Email: copyright@apexcloud.xyz
                                         <h1>Cwxkie's Wrld Official Website</h1>
                                         <p>#CwxkieWrld</p>
 
-                                        <div class="slider-btns">
-                                            <a href="" class="btn hero-btn">Sign Up</a>
                                         </div>
                                     </div></center>
                                 </div>
@@ -312,9 +308,9 @@ Email: copyright@apexcloud.xyz
                                         </div>
                                         <div class="footer-tittle">
                                             <div class="footer-pera">
-                                                <p>7609 McKinley Avenue Los Angles, CA 90011</p>
+                                                <p>#CwxkieWrld</p>
                                                 <p><a><span class="__cf_email__" data-cfemail="3d4e484d4d524f497d5e525c4e495c5155524f544752535f5c5356135e5250">[email&#160;protected]</span></a></p>
-                                                <p>+1 (213)-544-1991</p>
+                                                <p>discord@cwookie.xyz</p>
                                             </div>
                                         </div>
                                     </div>
@@ -325,11 +321,11 @@ Email: copyright@apexcloud.xyz
                                     <div class="footer-tittle">
                                         <h4>Useful links</h4>
                                         <ul>
-                                            <li><a href="#">Credit Cards</a></li>
-                                            <li><a href="#">Personal Loans</a></li>
-                                            <li><a href="#">Checking and Savings</a></li>
-                                            <li><a href="#">Business Loans</a></li>
-                                            <li><a href="#">Mobile Deposit</a></li>
+                                            <li><a href="/discord">Discord Server</a></li>
+                                            <li><a href="/youtube">YouTube Channel</a></li>
+                                            <li><a href="/twitch">Twitch</a></li>
+                                            <li><a href="/twitter">Twitter</a></li>
+                                            <li><a href="/guidelines">Guidelines</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -337,12 +333,10 @@ Email: copyright@apexcloud.xyz
                             <div class="col-xl-2 col-lg-2 col-md-4 col-sm-5">
                                 <div class="single-footer-caption mb-50">
                                     <div class="footer-tittle">
-                                        <h4>Legal</h4>
+                                        <h4>Powered by</h4>
                                         <ul>
-                                            <li><a href="#">Terms of Use</a></li>
-                                            <li><a href="#">Privacy Policy</a></li>
-                                            <li><a href="#">Fair Credit Reporting</a></li>
-                                            <li><a href="#">Cardholder Agreement</a></li>
+                                            <li><a href="https://coastalhorizonbank">Coastal Horizon / Stylesheet</a></li>
+                                            <li><a href="https://syswebcorp.com">SysWeb Corp / Coastal Horizon Developers</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -361,16 +355,9 @@ Email: copyright@apexcloud.xyz
                                                 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
                                                     document.write(new Date().getFullYear());
                                                 </script>
-                                                All rights reserved - Coastal Horizon Bank NA - Powered by SysWeb Corporation.
+                                                All rights reserved -  Cwxkie - Stylesheet used from Coastal Horizon/SysWeb Corporation.
                                             </p>
                                             <br>
-                                            <p style="font-size:12px; padding:0; margin:0;">“Coastal Horizon Bank,” “Coastal Horizon,” “Coastal Horizon Bank NA,” the Coastal Horizon logo and the 3 circle are trademarks of Coastal Horizon Bank N.A.  Coastal Horizon Bank, N.A. is a wholly-owned subsidiary of SysWeb Corporation.</p>
-                                            <p style="font-size:12px; padding:0; margin:0;">Investing involves market risk, including possible loss of principal, and there is no guarantee that investment objectives will be achieved.</p>
-                                            <p style="font-size:12px; padding:0; margin:0;">Bank deposit accounts, such as checking and savings, may be subject to approval. Deposit products and related services are offered by Coastal Horizon Bank, N.A. Member FDIC.</p>
-                                            <p style="font-size:12px; padding:0; margin:0;">The Contactless Symbol is a trademark owned by and used with permission of EMVCo, LLC</p>
-                                            <p style="font-size:12px; padding:0; margin:0;">Coastal Horizon Bank N.A's services are offered and fufilled by Celtic Bank member of FDIC and Equal Housing Lender. Coastal Horizon cards are also issued by Celtic Bank.</p>
-                                            <p style="font-size:12px; padding:0; margin:0;"><small>1</small> Card offers with a cash or miles rewards bonus are available by clicking the "Apply Now" button on this page, and may not be available if you navigate away from or close this page. The bonus may not be available for existing or previous accountholders.</p>
-                                            <p style="font-size:12px; padding:0; margin:0;"><small>2</small> Some activity may continue with Card Lock, including returns, credits, payments, interest, dispute adjustments, other account fees, purchase transactions during system downtime, and certain other exempted transactions.</p>
                                         </div>
                                     </div>
                                 </div>
