--- a/beta/home.html
+++ b/beta/home.html
@@ -23,6 +23,12 @@ Email: copyright@apexcloud.xyz
 
 -->
 <!DOCTYPE html>
+<div align="center">
+    <marquee behavior="alternate" bgcolor="#bb3434" direction="left" height:="" 
+    loop="7" scrollamount="1" scrolldelay="2" width="100%">
+    <span style="font-size: 20px;color:#FFFFFF">
+    This website is currently still under construction, everthing listed under "Coastal Horizon Bank" is not owned by Cwxkie and shall not be used against us.</span></marquee>
+   </div>
 <html class="no-js" lang="zxx">
     <head>
         <meta charset="utf-8" />
