--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div id="dialogWrap">
         <div id="dialogWrapCell">
             <div id="mainDialog">
-                <div id="dialogText">This page is password protected.</div>
+                <div id="dialogText">This page is currently under construction, as a result this page is password protected. If you are the administrator who set this password or a user that has the password please enter it now.</div>
                 <div id="passArea">
                     <p id="passwordPrompt">Password</p>
                     <input id="pass" type="password" name="pass" autofocus>
